[APPBUG-214] Click on Giftcard preview & also GS popup in IE 9-Not grading out    Updated and fixed Modalbox lib, should work in IE9 now.    Fix for view_cart being thrown into Quirks mode (and thus not showing a GS overlay).
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@13764 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/modalbox.css
+++ b/projects/Media/docroot/assets/css/modalbox.css
@@ -1,17 +1,38 @@
+/*
+	modalbox.css
+
+	Modalbox project
+
+	Created by Andrew Okonetchnikov.
+	Copyright 2006-2010 okonet.ru. All rights reserved.
+
+	Licensed under MIT license.
+*/
+
 #MB_overlay {
 	position: absolute;
 	margin: auto;
 	top: 0;	left: 0;
 	width: 100%; height: 100%;
 	z-index: 9999;
-	border-width: 0;
+	border: 0;
 	background-color: #fff!important;
 }
 #MB_overlay[id] { position: fixed; }
 
+#MB_windowwrapper {
+	position:absolute;
+	top:0;
+	width:100%;
+}
+
 #MB_window {
-	position: absolute;
-	border-width: 0;
+	position:relative;
+	margin-left:auto;
+	margin-right:auto;
+	top:0;
+	left:0;
+	border: 0 solid;
 	text-align: left;
 	z-index: 10000;
 }
